[package]
name = "blazen-embed-tract"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Pure-Rust ONNX inference backend for Blazen embeddings (tract-onnx)"

[dependencies]
# wasm32-compatible deps. Only `serde`, `serde_json`, `tracing`, `thiserror`
# survive the wasm32 cut — everything that drives ONNX inference, tokenization,
# model download, or runtime scheduling lives behind the native target gate
# below because those crates either depend on `mio`/`tokio::fs` (forbidden on
# wasm32) or pull in C/C++ toolchains we do not want in a `wasm-bindgen` build.
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", default-features = false, features = ["sync"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native-only: tract-onnx + tokenizers + the model-cache download stack pull
# in heavy C/C++ deps (or hf-hub via blazen-model-cache) and tokio's fs/rt
# features that drag in mio. Gating them here keeps `cargo check
# --target wasm32-unknown-unknown` working for downstream consumers.
blazen-model-cache = { workspace = true }
tokenizers = { workspace = true }
tract-onnx = { workspace = true }
ndarray = { workspace = true }
tokio = { version = "1", default-features = false, features = ["fs", "rt", "rt-multi-thread", "macros", "time"] }

# wasm32-unknown-unknown only (the WASM SDK build): tract + tokenizers compile
# to wasm with the right feature flags. `tokenizers` needs `unstable_wasm`
# (replaces `onig` with `fancy-regex` and pulls in `getrandom/wasm_js`);
# `tract-onnx` needs `getrandom-js`. Model and tokenizer bytes arrive via
# `web_sys::fetch` instead of `hf-hub`, so the `blazen-model-cache` stack is
# bypassed entirely on this target. Excludes `wasm32-wasip1*` because `web-sys`
# / `wasm-bindgen` are browser-only — the wasi target gets its own block below.
[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies]
tokenizers = { version = "0.21", default-features = false, features = ["unstable_wasm"] }
tract-onnx = { workspace = true, features = ["getrandom-js"] }
ndarray = { workspace = true }
wasm-bindgen = "=0.2.118"
wasm-bindgen-futures = "=0.4.68"
js-sys = "=0.3.95"
web-sys = { version = "=0.3.95", features = ["Window", "Request", "RequestInit", "RequestMode", "Response"] }
getrandom = { version = "0.2", features = ["js"] }

# wasm32-wasip1* (the napi-rs wasi build for Cloudflare Workers / Deno): same
# tract + tokenizers feature set as the wasm-bindgen build, but model/tokenizer
# bytes arrive via `reqwest::get` instead of `web_sys::fetch`. `@napi-rs/wasm-runtime`
# polyfills networking via the host runtime, so plain `reqwest` works here.
# No `wasm-bindgen` / `js-sys` / `web-sys` because those are browser-only.
[target.'cfg(all(target_arch = "wasm32", target_os = "wasi"))'.dependencies]
tokenizers = { version = "0.21", default-features = false, features = ["unstable_wasm"] }
tract-onnx = { workspace = true, features = ["getrandom-js"] }
ndarray = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
reqwest = { workspace = true }

[lints]
workspace = true
