[package]
name = "blazen-events"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Event traits and built-in event types for the Blazen workflow engine"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true
tsify-next = { version = "0.5", features = ["js"], optional = true }
wasm-bindgen = { version = "=0.2.118", optional = true }

[features]
default = []
# Emit TypeScript type definitions for the canonical event types via
# `tsify-next`. Pulled in by `blazen-wasm-sdk` so JS callers see typed
# `UsageEvent`/`ProgressEvent` shapes without a hand-written wrapper.
tsify = ["dep:tsify-next", "dep:wasm-bindgen"]

[lints]
workspace = true
