[package]
name = "blazen-image-diffusion"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Local image generation backend for Blazen using diffusion-rs (pure Rust Stable Diffusion)"

[dependencies]
blazen-model-cache = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
tracing.workspace = true
thiserror = { workspace = true }
diffusion-rs = { version = "0.1.19", optional = true }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"], optional = true }
base64 = { workspace = true, optional = true }

[features]
default = []
# `engine` links the real diffusion-rs runtime (CPU-only by default).
engine = ["dep:diffusion-rs", "dep:image", "dep:base64"]

# Platform-specific acceleration features.
#
# These are intentionally NO-OP marker flags at this library level. Cargo
# features cannot be gated on `cfg(target_os)`, and `cargo --all-features`
# must pass on every host -- forwarding to e.g. `diffusion-rs/metal` on
# Linux or `diffusion-rs/cuda` without an NVIDIA toolchain causes hard
# build failures in the stable-diffusion.cpp cmake build.
#
# To actually engage GPU acceleration, add `diffusion-rs` as a direct
# dependency in your **binary crate** with the desired feature set:
#
#   [dependencies]
#   diffusion-rs = { version = "0.1.19", features = ["cuda"] }
#
# Cargo's feature unification will merge it with the `engine` dep here.
cuda = ["engine"]
metal = ["engine"]
vulkan = ["engine"]

[lints]
workspace = true
