[package]
name = "blazen-llm-candle"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Local LLM backend for Blazen using candle inference engine"

[dependencies]
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true, features = ["tokio"] }
blazen-model-cache = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
tracing.workspace = true
thiserror = { workspace = true }

# On Apple targets, forward metal feature into candle-core
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
candle-core = { workspace = true, optional = true, features = ["metal"] }

[features]
default = ["cpu"]
engine = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]
cpu = ["engine"]
cuda = ["engine"]
metal = ["engine"]

[lints]
workspace = true
