[package]
name = "blazen-llm-candle"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Local LLM backend for Blazen using candle inference engine"

[dependencies]
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true, features = ["tokio"] }
blazen-model-cache = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
tracing.workspace = true
thiserror = { workspace = true }
cudarc = { version = "0.19", default-features = false, features = ["fallback-latest"], optional = true }

# Apple-target deps unconditionally pull metal + accelerate. The `metal` /
# `accelerate` feature flags exist as no-op markers for cross-platform
# scripts; on Apple targets the backends are always available, on other
# targets enabling them forwards to nothing (the dep can't compile there).
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
candle-core = { workspace = true, optional = true, features = ["metal", "accelerate"] }
candle-nn = { workspace = true, optional = true, features = ["metal", "accelerate"] }
candle-transformers = { workspace = true, optional = true, features = ["metal", "accelerate"] }

[features]
default = ["cpu"]
engine = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]
cpu = ["engine"]
# `dep:cudarc` (with `fallback-latest`) lets `cuda` build WITHOUT nvcc: cudarc's
# build.rs warns + assumes the latest CUDA instead of panicking, so
# `cargo {check,clippy} --all-features` works on machines without a CUDA toolkit
# (macOS, plain CI runners) while real CUDA boxes still build/link normally.
cuda = ["engine", "candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "dep:cudarc"]
# `metal`/`accelerate` are intentional no-op markers: on Apple targets the candle
# deps in the `[target.'cfg(apple)']` block already pull `metal` + `accelerate`,
# so Apple-Silicon acceleration is always on; on non-Apple targets forwarding
# `candle-core/metal` cannot compile (objc2/metal-kernels are Apple-only), which
# would break `--all-features` on linux. Do NOT forward them here.
metal = ["engine"]
accelerate = ["engine"]

[lints]
workspace = true

[dev-dependencies]
safetensors = "0.7.0"
