[package]
name = "blazen-llm-llamacpp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "llama.cpp HTTP-server (llama-server) proxy provider for Blazen — OpenAI-compat + native completion + runtime LoRA adapter toggle"

[features]
default = []
# Engine feature. llama-server is an HTTP proxy — there is no in-process
# runtime to optionally link, so this flag is currently a no-op kept for
# parity with the other local-backend crates. Reserved for any future
# server-launch helpers that bring in heavy native deps.
engine = []

[dependencies]
async-trait.workspace = true
futures-util.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "rt", "time"] }
tracing.workspace = true

[lints]
workspace = true

[dev-dependencies]
mockito = "1.7.2"
tokio = { workspace = true, features = ["macros", "rt"] }
