[package]
name = "blazen-llm-llamacpp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Local LLM backend for Blazen using llama.cpp inference engine"

[dependencies]
llama-cpp-2 = { version = "0.1.143", optional = true, default-features = false }
encoding_rs = { version = "0.8", optional = true }
blazen-model-cache = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
tokio-stream = { workspace = true, optional = true }
tracing.workspace = true
thiserror = { workspace = true }
futures-util = { workspace = true }

[features]
default = ["cpu"]
# GPU features are markers only — they don't forward to llama-cpp-2's
# features because `--all-features` would pull in platform-specific
# deps (metal → objc2, cuda → cudarc, rocm → hipblas) that fail on
# machines without the matching toolkit. Users wanting real GPU
# acceleration enable llama-cpp-2's features directly in their binary
# crate's Cargo.toml; Cargo's feature unification merges them.
engine = ["dep:llama-cpp-2", "dep:encoding_rs", "dep:tokio-stream"]
cpu = ["engine"]
cuda = ["engine"]
metal = ["engine"]
vulkan = ["engine"]
rocm = ["engine"]

[lints]
workspace = true
