[package]
name = "blazen-llm-llamacpp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Local LLM backend for Blazen using llama.cpp inference engine"

[dependencies]
llama-cpp-2 = { version = "0.1.146", optional = true, default-features = false }
encoding_rs = { version = "0.8", optional = true }
blazen-model-cache = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
tokio-stream = { workspace = true, optional = true }
tracing.workspace = true
thiserror = { workspace = true }
futures-util = { workspace = true }
llama-cpp-sys-2 = { version = "=0.1.146", default-features = false, optional = true }

[features]
default = ["cpu"]
# GPU features are markers only — they don't forward to llama-cpp-2's
# features because `--all-features` would pull in platform-specific
# deps (metal → objc2, cuda → cudarc, rocm → hipblas) that fail on
# machines without the matching toolkit. Users wanting real GPU
# acceleration enable llama-cpp-2's features directly in their binary
# crate's Cargo.toml; Cargo's feature unification merges them.
engine = [
    "dep:llama-cpp-2",
    "dep:llama-cpp-sys-2",
    # Route ggml through the Blazen shared blazen-ggml-sys instead of
    # llama-cpp-sys-2's bundled in-tree copy. The `[patch.crates-io]`
    # entry in the workspace Cargo.toml replaces upstream llama-cpp-sys-2
    # with our Blazen fork that wires DEP_GGML_PREFIX into
    # CMAKE_PREFIX_PATH so `find_package(ggml)` resolves correctly. Pairs
    # with the whisper-rs-sys and diffusion-rs-sys forks to eliminate
    # all three ggml triple-vendoring duplications.
    "llama-cpp-sys-2/system-ggml-static",
    "dep:encoding_rs",
    "dep:tokio-stream",
]
cpu = ["engine"]
cuda = ["engine"]
metal = ["engine"]
vulkan = ["engine"]
rocm = ["engine"]

[lints]
workspace = true
